--- a/playground_notebooks/combineDirs.ipynb
+++ b/playground_notebooks/combineDirs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,14 +10,45 @@
     "import os\n",
     "\n",
     "# current folder path\n",
-    "current_folder = \"/home/umar-musashi/Downloads/PokemonData\"\n"
+    "current_folder = \"/Users/umar/UWaterloo/Musashi Winter Co-op/Content-Based-Image-Retrieval/playground_notebooks/MNIST/MNIST - JPG - testing\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/umar/UWaterloo/Musashi Winter Co-op/Content-Based-Image-Retrieval/playground_notebooks/MNIST'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.dirname(current_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/umar/UWaterloo/Musashi Winter Co-op/Content-Based-Image-Retrieval/playground_notebooks/MNIST/MNIST - JPG - testingmerge_folder'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Function to create new folder if not exists\n",
     "def make_new_folder(folder_name, parent_folder):\n",
@@ -61,7 +92,8 @@
     "        os.rename(dir_to_move, pathNewName)\n",
     "        # move original file to merge_folder\n",
     "        shutil.copy(pathNewName, merge_folder_path)\n",
-    "\n"
+    "\n",
+    "shutil.move(merge_folder_path, os.path.dirname(current_folder))"
    ]
   },
   {
@@ -91,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
