--- a/playground_notebooks/faiss_image_search.ipynb
+++ b/playground_notebooks/faiss_image_search.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,8 +95,7 @@
     "            pathNewName = os.path.join(src, sub_dir + \"/\" + sub_dir + '_' + contents)\n",
     "            os.rename(dir_to_move, pathNewName)\n",
     "            # move original file to merge_folder\n",
-    "            shutil.copy(pathNewName, merge_folder_path)\n",
-    "\n"
+    "            shutil.copy(pathNewName, merge_folder_path)"
    ]
   },
   {
@@ -115,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -217,13 +216,6 @@
     "    print(\"[DEBUG]: Preview Image Paths:\", img_paths[0])\n",
     "    return features, img_paths"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -245,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.0"
   },
   "orig_nbformat": 4
  },
