--- a/playground_notebooks/combineDirs.ipynb
+++ b/playground_notebooks/combineDirs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,41 +10,21 @@
     "import os\n",
     "\n",
     "# current folder path\n",
-    "current_folder = \"/Users/umar/UWaterloo/Musashi Winter Co-op/Content-Based-Image-Retrieval/playground_notebooks/MNIST/MNIST - JPG - testing\"\n"
+    "current_folder = \"/home/umar-musashi/Downloads/shapes\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/umar/UWaterloo/Musashi Winter Co-op/Content-Based-Image-Retrieval/playground_notebooks/MNIST'"
+       "'/home/umar-musashi/Downloads/shapesmerge_folder'"
       ]
      },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.path.dirname(current_folder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/umar/UWaterloo/Musashi Winter Co-op/Content-Based-Image-Retrieval/playground_notebooks/MNIST/MNIST - JPG - testingmerge_folder'"
-      ]
-     },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.0"
   },
   "orig_nbformat": 4
  },
